aws-vpc-ec2-ngnix/security_group.tf
resource "aws_security_group" "ng-sg" {
    vpc_id = aws_vpc.my_vpc.id
  

#inbound
ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
 egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name="ng-sg"
  }
}
